product 클래스 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,6 @@ spring:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     database : mysql
     hibernate.ddl-auto : update
+
+
+#    //SPRING_DATASOURCE_PASSWORD=root;SPRING_DATASOURCE_URL=jdbc:mysql://ec2-43-206-94-200.ap-northeast-1.compute.amazonaws.com:3306/likelion-db1
